[package]
name = "dist_block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axnet = { path = "../axnet" }
driver_common = { path = "../../crates/driver_common" }
driver_block = { path = "../../crates/driver_block" }

spin = { version = "0.9.8", default-features = false, features = ["rwlock"] }

dashmap = { version = "3.8.0", default-features = false, features = [
    "no_std",
    "serde",
    "axstd",
] }
