[package]
name = "dfs-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bincode]
version = "2.0.0-rc.3"
default-features = false
features = ["alloc", "derive", "serde"]

[dependencies]
axfs = { path = "../../modules/axfs", features = ["distfs"]}
axerrno = { path = "../../crates/axerrno" }