[package]
name = "dfs-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bincode]
version = "2.0.0-rc.3"
default-features = false
features = ["alloc", "derive", "serde"]

[dependencies.dashmap]
version = "5.5.3"
default-features = false
features = ["serde"]

[dependencies.crossbeam]
version = "0.8.2"
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1.0.188"
default-features = false
features = ["alloc", "derive"]

[dependencies]
axfs = { path = "../../modules/axfs", features = ["distfs"] }
axerrno = { path = "../../crates/axerrno" }
env_logger = "0.10.0"
logger = { version = "*", package = "log" }
