[package]
name = "serde-net-arceos"
version = "0.1.0"
edition = "2021"
authors = ["Sssssalty <saltyfish2233@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { path = "../../../ulib/axstd", features = [
    "alloc",
    "multitask",
    "net",
] }

common = { path = "../common", package = "test-serde-net-common" }
