[package]
name = "test-serde-net-common"
version = "0.1.0"
edition = "2021"
authors = ["Sssssalty <saltyfish2233@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serde]
version = "1.0.188"
default-features = false
features = ["derive", "alloc", "rc"]

[dependencies.bincode]
version = "2.0.0-rc.3"
default-features = false
features = ["alloc", "derive"]
