[package]
name = "test-serde-net-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
log = "*"
env_logger = "*"

common = { path = "../common", package = "test-serde-net-common" }

[dev-dependencies.bincode]
version = "2.0.0-rc.3"
